Fixed: tag input alignment and height

--- a/frontend/src/Components/Form/TagInput.css
+++ b/frontend/src/Components/Form/TagInput.css
@@ -1,4 +1,3 @@
-
 .input {
   composes: input from '~./AutoSuggestInput.css';
 
@@ -19,6 +18,6 @@
   min-width: 20%;
   max-width: 100%;
   width: 0%;
-  height: 21px;
+  height: 31px;
   border: none;
 }
